add /appointments/{insuredId}/{appointmentId} route
